--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 		<title>Alyssa's Programming Portfolio</title>
 	</head>
 	<body>
-		<header></header>
-		<content></content>
+		<header>
+      <nav>
+        <ul class="nav-menu">
+          <li class="nav-button">Home</li>
+          <li class="nav-button">Projects</li>
+          <li class="nav-button">Blog</li>
+          <li class="nav-button">About</li>
+          <li class="nav-button">Contact</li>
+        </ul>
+      </nav>
+    </header>
+		<content
+  </content>
 	</body>
 </html>
