--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			rel="stylesheet"
-			href="/Users/alyssa/Desktop/Programming/Portfolio/resources/css/styles.css"
+			href="https://lyssapearl.github.io/resources/css/styles.css"
 			type="text/css" />
 		<title>Alyssa's Programming Portfolio</title>
 	</head>
