add projects page

--- a/dasmotos.html
+++ b/dasmotos.html
@@ -6,7 +6,7 @@
 		<title>Dasmoto's Arts & Crafts</title>
 		<link
 			rel="stylesheet"
-			href="/Users/alyssa/Desktop/Programming/Codecademy/Front End Dev Career Path/Projects/Dasmotos Art Supplies/resources/css/dasmotostyles.css"
+			href="https://lyssapearl.github.io/dasmotostyles.css"
 			type="text/css" />
 	</head>
 	<body>
